# peperoncino

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: pythonpackage.yml  pythonpublish.yml
peperoncino/: __init__.py  processing.py
peperoncino/processings/: apply_column.py  as_category.py  as_type.py  assign.py  combinations.py  drop_columns.py  drop_duplicates.py  pipeline.py  query.py  rename_columns.py  select.py  stats_encoding.py  target_encoding.py
peperoncino/utils/: __init__.py  from_list.py  from_yaml.py
pupil/: __init__.py  processing.py
pupil/processings/: apply_column.py  as_category.py  assign.py  combinations.py  drop_columns.py  drop_duplicates.py  pipeline.py  query.py  rename_columns.py  select.py  stats_encoding.py  target_encoding.py
tests/: test_peperoncino.py  test_processing.py  test_pupil.py
tests/processings/: test_apply_column.py  test_as_category.py  test_as_type.py  test_assign.py  test_combinations.py  test_drop_columns.py  test_drop_duplicates.py  test_pipeline.py  test_query.py  test_rename_columns.py  test_select.py  test_stats_encoding.py  test_target_encoding.py
tests/utils/: test_from_list.py  test_from_yaml.py
