[tool.poetry]
name = "peperoncino"
version = "0.0.5"
description = "peperoncino: A library for easy data processing for pandas"
readme = "README.md"
authors = ["Junki Ishikawa <69guitar1015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.７"
numpy = "^1.17"
pandas = "^0.25.3"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-flake8 = "^1.0"
pylint = "^2.4"
autopep8 = "^1.4"
pytest-cov = "^2.8"
black = "^19.3b0"
mypy = "^0.740.0"
flake8-black = "^0.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"